# calc

./: .gitignore  CMakeLists.txt  LICENSE_APACHE  Makefile  README.md  calc.cpp  lex.cpp  lex.hpp  parse.cpp  parse.hpp
source/: .gitignore  calc.cpp  eval.cpp  eval.hpp  lex.cpp  lex.hpp  parse.cpp  parse.hpp  queue.cpp  queue.hpp
tests/: eval_test.cpp  eval_test.hpp
